styles.css
/* VARS */
@font-face {
    font-family: "Brass Mono";
    src: url("./fonts/BrassMonoComfortableRegular-XmYK.woff") format("woff"), url("./fonts/BrassMonoCozyRegular-g146.woff") format("woff"), url("./fonts/BrassMonoRegular-o2Yz.woff"), url("woff");
}

@font-face {
    font-family: "Mostly Mono";
    src: url("./fonts/MostlyMono-nr4P.woff") format("woff");
}

@font-face {
    font-family: "Select Mono";
    src: url("./fonts/SelectMonoItalic-ywm8d.woff") format("woff");
}


:root{
    --nav-min-width:40px;
    --nav-expanded-width: 250px;
    --side-min-width: 70px;
    --side-expanded-width:310px;
    --footer-height:100px;
    --border-rd-400: 15px;
    --drop-shdw-700:1px 1px 1px rgb(45, 45, 45);
    --accent-clr-300:rgb(120, 120, 120);

    --tab-height: 39px;
    --tab-width: 182px;

    --side-width:var(--side-expanded-width);
    --nav-width: var(--nav-min-width);
    --size-300:.5rem;
    --post-it-size:250px;
    --post-it-spacing: 10px;

    --ff-announcements: "Select Mono", monospace;
}



/* RESET */
/* Box sizing rules */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Remove default margin */
* {
    margin: 0;
    padding: 0;
    font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
    list-style: none;
}

/* Set core root defaults */
html:focus-within {
    scroll-behavior: smooth;
}

body,
html {
    height: 100%;
    width: 100%;
}

/* Set core body defaults */
body {
    text-rendering: optimizeSpeed;
    line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
    text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
    max-width: 100%;
    /* display: block; */
}


/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
    html:focus-within {
        scroll-behavior: auto;
    }

    *,
    *::before,
    *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}


/* GENERAL STYLING */

body{
    display: grid;
}

.flex-container {
    display: flex;
}


/* SIDEBAR */
.sidebar{
    --_bar-spacing:1em;
    --nav-toggle-size:50px;
    --_nav-img-size:30px;

    height: 100%;
    width: var(--nav-width) ;
    background-color: antiquewhite;
    padding: var(--_bar-spacing) 0;

    display: flex;
    flex-direction: column;
    gap: var(--_bar-spacing);
    align-items: center;
    transition: width .3s ease-in-out;
    -webkit-transition: width .3s ease-in-out;
    -moz-transition: width .3s ease-in-out;
} 

.sidebar>button{
    all: unset;
    cursor: pointer;
}

.sidebar > ul{
    display: grid;
    gap: inherit;
    list-style: none;
}

.sidebar li>a, .sidebar>button{
    display: flex;
    align-items: center;
    gap: var(--_bar-spacing);
    text-decoration: none;
    color: black;
}

.sidebar>button>img#nav-toggle-img{
    content:url("./img/close-book.svg");
    height: var(--nav-toggle-size);
    width: var(--nav-toggle-size);
}

.sidebar>button[data-expanded]>img#nav-toggle-img {
    content: url("./img/open-book.svg");
}

.sidebar .nav-img{
    height: var(--_nav-img-size);
    width: var(--_nav-img-size);
}

.sidebar li>a:hover, .sidebar button:hover{
    filter: drop-shadow(var(--drop-shdw-700));
    -webkit-filter: drop-shadow(var(--drop-shdw-700));
}

.sidebar .page-name,
.sidebar>button>span {
    display: none;
}

.sidebar > .nav-toggle[data-expanded] >span,
.sidebar>.nav-toggle[data-expanded] + ul .page-name{
    display: inline-block;
}

/* FOOTER */
.website-footer{
    min-height: fit-content;
    height: var(--footer-height);
    background-color: rgb(148, 152, 152);
}

/* HEADER AND MAIN */
.container{
    height: 100%;
    height: auto;
    display: grid;
    flex-grow: 1;
    grid-template-rows: clamp(min-content, 1fr, 300px) minmax(min-content, 4fr);
}

/* HEADER */
.primary-header{
    --_header-spacing-400: 1rem;
    grid-row: 1;
    background-color: rgb(191, 233, 233);
    padding: 2rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: var(--_header-spacing-400);
}

.header-A{
    display: grid;
}

.header-A .logo{
    font-size: 3rem;
}

.header-B{
    display: grid;
    gap: var(--_header-spacing-400);
    justify-items: center;
}

.header-B > .top-container{
    display: grid;
    grid-template-columns: repeat(3, auto);
    gap: var(--_header-spacing-400);
    justify-content: center;
    align-items: center;
}



/* search button */
form.search-bar{
    --_search-icn-size:1.5rem;
    display: flex;
    gap: 0.2em;

    min-height: calc(var(--_search-icn-size)*1.5);
    height: 1rem;
    min-width: min(40ch, 100%);
    max-width: 55ch;
}
input[type="search"].search-input{
    --_hover-style:italic;
    flex-grow: 1;
    background: none;
    border: none;
    border-radius: var(--border-rd-400);
    padding: var(--size-300) 0.5em;
}

form.search-bar:focus-within{
    height: 3rem;
}

.search-submit{
    border: none;
    outline: none;
    background: none;
}

input[type="search"].search-input:focus{
    outline: none;
    border: 1px solid var(--accent-clr-300);
}

input[type="search"]::placeholder{
    color: var(--accent-clr-300);
    font-style: var(--_hover-style); 
}

input[type="search"]::-webkit-input-placeholder {
    color: var(--accent-clr-300);
    font-style: var(--_hover-style); 
}

input[type="search"]:-ms-input-placeholder {
    color: var(--accent-clr-300) !important;
    font-style: var(--_hover-style) !important;
}

.search-submit:hover>img{
    filter: drop-shadow(var(--drop-shdw-700));
    -webkit-filter: drop-shadow(var(--drop-shdw-700));
}

.search-submit:focus>img{
    filter: drop-shadow(0 0 1px red);
    -webkit-filter: drop-shadow(0 0 1px red);
}
/* ... */

